# cpp-jotter

./: CMakeLists.txt  README.md  build.ps1  build.sh
doc/: devnotes.txt  toolchain.txt
src/: CMakeLists.txt  helloworld.cpp
